--- a/projects/contagion-master/contagion.ini
+++ b/projects/contagion-master/contagion.ini
@@ -17,7 +17,8 @@ Rows = 100
 Cols = 100
 # Proportions of different kinds of individuals
 Proportion_AtRisk = 0.20
-Proportion_Typical = 0.80
+Proportion_Typical = 0.70
+Proportion_Wanderer = 0.10
 
 [Chart]
 # Good dimensions will depend on other parameters, including
@@ -40,3 +41,10 @@ N_Neighbors = 2
 Visit_Dist = 1  # How far away are the visits
 P_Greet = 0.25  # Send most visitors away
 P_Visit = 0.25     # 1 visit each 4 days on average
+
+[Wanderer]
+P_Death = 0.001 # Not an at risk individual just a typical 
+N_Neighbors = 10 # Accounts for neighbors in multiple places
+Visit_Dist = 50 # Will travel much further
+P_Greet = 0.95 # Very adventurous will welcome anyone
+P_Visit = 0.75 # Visiting from somewhere else most likely has friends there
